# spinners-mirea

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json
src/: cinema.cpp  not_about_spinners.cpp  spinners.cpp  spinners_again.cpp  wagon.cpp
